--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 .App {
-  text-align: center;
+ box-sizing: border-box;
+ margin:0;
+ padding: 0;
+ overflow-x:hidden;
+ overflow-y:hidden;
+ width:100%;
+ height: 100%;
+
+ 
+ /* background-image: url("../src/assets/image.png"); */
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center; */
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +49,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
